--- a/SportBoard.Web/Views/UserNotification/UserNotifications.cshtml
+++ b/SportBoard.Web/Views/UserNotification/UserNotifications.cshtml
@@ -2,7 +2,7 @@
 
 @if (Model.Count < 1)
 {
-    <p>Oh no! You don't seem to have any unread notifications </p>
+    <p>Oh no! You don't seem to have any unread notifications, maybe select the above tick box to see your read notifications! </p>
 }
 
 @foreach (var notification in Model)
