Change to UserNotificationRepository as it didn't pull back unread when view read was enabled

--- a/SportBoard.Web/Views/UserNotification/Index.cshtml
+++ b/SportBoard.Web/Views/UserNotification/Index.cshtml
@@ -25,74 +25,7 @@
     </div>
 </div>
 
-@section Scripts {
-
-    <script>
-        $(document).ready(function () {
-            $('#filterOptions li').on("click", function () {
-                var onlyUnread = isOnlyUnread();
-                removeActive();
-
-                $(this).toggleClass('active');
-                var selection = $(this).text();
-                var linkUrl = '/UserNotification/FilterNotifications?filterOption=' + selection + "&onlyUnread=" + onlyUnread;
-
-                $.ajax({
-                    url: linkUrl,
-                    type: "GET",
-                    dataType: "html",
-                    success: function (data) {
-                        $('.notificationView').html(data);
-                    }
-                });
-            });
-
-            $('#viewRead').change(function () {
-                var onlyUnread = isOnlyUnread();
-                var selection = activeFilterOption();
-                var linkUrl = '/UserNotification/FilterNotifications?filterOption=' + selection + "&onlyUnread=" + onlyUnread;
-
-                $.ajax({
-                    url: linkUrl,
-                    type: "GET",
-                    dataType: "html",
-                    success: function (data) {
-                        $('.notificationView').html(data);
-                    }
-                });
-            });
-
-            function removeActive() {
-                var kids = $('#filterOptions').find('li');
-                kids.removeClass('active');
-            }
-
-            var isOnlyUnread = function () {
-                var onlyUnread = true;
-                if ($('#viewRead').prop("checked")) {
-                    onlyUnread = false;
-                }
-                return onlyUnread;
-            }
-
-            var activeFilterOption = function () {
-                return $('.active').text();
-            }
-            
-
-            @*$('#viewRead').change(function () {
-                var viewReadUrl = '@Url.Action("ViewReadNotifications", "UserNotification")';
-                if (this.checked) {
-                    $.ajax({
-                        url: viewReadUrl,
-                        type: "GET",
-                        dataType: "html",
-                        success: function (data) {
-                            $('.notificationView').html(data);
-                        }
-                    })
-                }
-            })*@
-        });
-    </script>
+@using (Html.BeginScriptContext())
+{
+    Html.AddScriptFile("~/Scripts/Custom/UserNotificationFilters.js");
 }
